# wiiu-usb-rocket

./: .dockerignore  .gitignore  CHECK.md  NEXT.md  README.md  SHAME.md  TODO.md  docker-compose.yml  pyproject.toml  wiidownloader.py
.github/workflows/: publish-ghcr.yml
apps/api/: main.py
apps/worker/: runner.py
core/: config.py  crypto.py  db.py  schemas.py
core/catalog/: parser.py  vault_archive.py
core/models/: entities.py  enums.py
core/nus/: app_decryptor.py  fake_ticket.py  ticket.py  tmd.py
core/services/: catalog_service.py  disk_service.py  download_service.py  health_service.py  install_analyzer.py  queue_service.py  settings_service.py  wfs_adapter.py  writer_engine.py
deploy/docker/: Dockerfile
docs/: release-rollback.md
native/wfs_core/: CMakeLists.txt
native/wfs_core/include/: wfs_core_engine.h
native/wfs_core/src/: bindings.cpp  wfs_core_engine.cpp
scripts/: build_native.sh  cycle_install_test.py
tests/e2e/: test_queue_pipeline.py
tests/integration/: test_wfs_simulated.py  test_wfslib_patch_regression.py
tests/unit/: test_app_decryptor.py  test_catalog_normalization.py  test_catalog_parser.py  test_catalog_query_pagination.py  test_catalog_service_resilience.py  test_catalog_service_vault_fallback.py  test_catalog_source_endpoint.py  test_crypto.py  test_disk_service_guards.py  test_disk_service_runtime_attach.py  test_disk_service_scan.py  test_download_service_parallelism.py  test_install_analyzer_phase7.py  test_native_adapter_errors.py  test_queue_catalog_enrichment.py  test_queue_live_lookup.py  test_queue_recovery.py  (+6 more)
(+5 files in other folders)
