[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wiiu-direct-usb-installer"
version = "0.1.0"
description = "Dockerized Wii U USB installer with queue, web UI, and native WFS core integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.44",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.11.0",
  "jinja2>=3.1.6",
  "httpx>=0.28.1",
  "python-multipart>=0.0.20",
  "cryptography>=46.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.13.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["apps*", "core*"]

